crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_banned_class.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31mError:[0m banned keyword 'class': Use functions and types instead of classes
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m banned_class.fl:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [31mc[0m[31ml[0m[31ma[0m[31ms[0m[31ms[0m[38;5;249m [0m[38;5;249mF[0m[38;5;249mo[0m[38;5;249mo[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m}[0m
 [38;5;240m  │[0m [31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m   [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m banned in Floe
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: Use functions and types instead of classes
[38;5;246m───╯[0m
