crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_banned_let.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31mError:[0m banned keyword 'let': Use `const` - all bindings are immutable in Floe
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m banned_let.fl:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [31ml[0m[31me[0m[31mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m4[0m[38;5;249m2[0m
 [38;5;240m  │[0m [31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m  │[0m  [31m╰[0m[31m─[0m[31m─[0m[31m─[0m banned in Floe
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: Use `const` - all bindings are immutable in Floe
[38;5;246m───╯[0m
[31mError:[0m unexpected token: Equal
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m banned_let.fl:1:7 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[31m=[0m[38;5;249m [0m[38;5;249m4[0m[38;5;249m2[0m
 [38;5;240m  │[0m       [31m┬[0m  
 [38;5;240m  │[0m       [31m╰[0m[31m─[0m[31m─[0m unexpected token here
[38;5;246m───╯[0m
