crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_banned_null.snap
---
source: crates/floe-core/tests/snapshot_errors.rs
expression: output
---
[31mError:[0m banned keyword 'null': Use `Option<T>` with `Some`/`None` instead of null
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m banned_null.fl:1:9 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31mn[0m[31mu[0m[31ml[0m[31ml[0m
 [38;5;240m  │[0m         [31m─[0m[31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m  │[0m           [31m╰[0m[31m─[0m[31m─[0m[31m─[0m banned in Floe
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: Use `Option<T>` with `Some`/`None` instead of null
[38;5;246m───╯[0m
