crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_banned_void.snap
---
source: crates/floe-core/tests/snapshot_errors.rs
expression: output
---
[31mError:[0m expected identifier, found Some(Banned(Void))
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m banned_void.fl:1:15 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249mg[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m>[0m[38;5;249m [0m[31mv[0m[31mo[0m[31mi[0m[31md[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m               [31m─[0m[31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m  │[0m                 [31m╰[0m[31m─[0m[31m─[0m[31m─[0m unexpected token here
[38;5;246m───╯[0m
[31mError:[0m expected LeftBrace, found Some(Banned(Void))
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m banned_void.fl:1:15 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249mg[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m>[0m[38;5;249m [0m[31mv[0m[31mo[0m[31mi[0m[31md[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m               [31m─[0m[31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m  │[0m                 [31m╰[0m[31m─[0m[31m─[0m[31m─[0m unexpected token here
[38;5;246m───╯[0m
[31mError:[0m banned keyword 'void': Use the unit type `()` instead of `void`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m banned_void.fl:1:15 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249mg[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m>[0m[38;5;249m [0m[31mv[0m[31mo[0m[31mi[0m[31md[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m               [31m─[0m[31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m  │[0m                 [31m╰[0m[31m─[0m[31m─[0m[31m─[0m banned in Floe
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: Use the unit type `()` instead of `void`
[38;5;246m───╯[0m
[31mError:[0m expected RightBrace, found Some(Eof)
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m banned_void.fl:3:3 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249m}[0m
 [38;5;240m  │[0m   [31m│[0m 
 [38;5;240m  │[0m   [31m╰[0m[31m─[0m unexpected token here
[38;5;246m───╯[0m
