crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_exported_missing_return_type.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31mError:[0m expected declaration after 'export'
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:1:8 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249me[0m[38;5;249mx[0m[38;5;249mp[0m[38;5;249mo[0m[38;5;249mr[0m[38;5;249mt[0m[38;5;249m [0m[31mf[0m[31mu[0m[31mn[0m[31mc[0m[31mt[0m[31mi[0m[31mo[0m[31mn[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249md[0m[38;5;249md[0m[38;5;249m([0m[38;5;249ma[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mm[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mb[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mm[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m        [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m            [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m unexpected token here
[38;5;246m───╯[0m
[31mError:[0m banned keyword 'function': Use `fn` instead of `function`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:1:8 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249me[0m[38;5;249mx[0m[38;5;249mp[0m[38;5;249mo[0m[38;5;249mr[0m[38;5;249mt[0m[38;5;249m [0m[31mf[0m[31mu[0m[31mn[0m[31mc[0m[31mt[0m[31mi[0m[31mo[0m[31mn[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249md[0m[38;5;249md[0m[38;5;249m([0m[38;5;249ma[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mm[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mb[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mm[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m        [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m            [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m banned in Floe
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: Use `fn` instead of `function`
[38;5;246m───╯[0m
