crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_no_cascade_from_invalid_field_access.snap
---
source: crates/floe-core/tests/snapshot_errors.rs
expression: output
---
[31mError:[0m unexpected token: Fn
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:2:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [31mf[0m[31mn[0m[38;5;249m [0m[38;5;249mc[0m[38;5;249mh[0m[38;5;249me[0m[38;5;249mc[0m[38;5;249mk[0m[38;5;249m([0m[38;5;249mu[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mU[0m[38;5;249ms[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mm[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m [31m─[0m[31m┬[0m  
 [38;5;240m  │[0m  [31m╰[0m[31m─[0m[31m─[0m unexpected token: Fn
[38;5;246m───╯[0m
[31mError:[0m unexpected token: ThinArrow
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:2:19 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249mc[0m[38;5;249mh[0m[38;5;249me[0m[38;5;249mc[0m[38;5;249mk[0m[38;5;249m([0m[38;5;249mu[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mU[0m[38;5;249ms[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m)[0m[38;5;249m [0m[31m-[0m[31m>[0m[38;5;249m [0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mm[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m                   [31m─[0m[31m┬[0m  
 [38;5;240m  │[0m                    [31m╰[0m[31m─[0m[31m─[0m unexpected token: ThinArrow
[38;5;246m───╯[0m
