crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_no_cascade_from_undefined_name.snap
---
source: crates/floe-core/tests/snapshot_errors.rs
expression: output
---
[31mError:[0m expected Equal, found Some(FatArrow)
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:1:13 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mc[0m[38;5;249mh[0m[38;5;249me[0m[38;5;249mc[0m[38;5;249mk[0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[31m=[0m[31m>[0m[38;5;249m [0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mm[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m             [31m─[0m[31m┬[0m  
 [38;5;240m  │[0m              [31m╰[0m[31m─[0m[31m─[0m unexpected token here
[38;5;246m───╯[0m
[31mError:[0m unexpected token: FatArrow
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:1:13 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mc[0m[38;5;249mh[0m[38;5;249me[0m[38;5;249mc[0m[38;5;249mk[0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[31m=[0m[31m>[0m[38;5;249m [0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mm[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m             [31m─[0m[31m┬[0m  
 [38;5;240m  │[0m              [31m╰[0m[31m─[0m[31m─[0m unexpected token: FatArrow
[38;5;246m───╯[0m
[31mError:[0m unexpected token: Equal
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:1:23 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mc[0m[38;5;249mh[0m[38;5;249me[0m[38;5;249mc[0m[38;5;249mk[0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mm[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249m [0m[31m=[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m                       [31m┬[0m  
 [38;5;240m  │[0m                       [31m╰[0m[31m─[0m[31m─[0m unexpected token: Equal
[38;5;246m───╯[0m
