crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_passing_unknown_to_typed_param.snap
---
source: crates/floe-core/tests/snapshot_errors.rs
expression: output
---
[33m[W001] Warning:[0m unused variable `doThing`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:3:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [33mf[0m[33mn[0m[33m [0m[33md[0m[33mo[0m[33mT[0m[33mh[0m[33mi[0m[33mn[0m[33mg[0m[33m([0m[33mx[0m[33m:[0m[33m [0m[33mG[0m[33mh[0m[33mo[0m[33ms[0m[33mt[0m[33mT[0m[33my[0m[33mp[0m[33me[0m[33m)[0m[33m [0m[33m=[0m[33m>[0m[33m [0m[33ms[0m[33mt[0m[33mr[0m[33mi[0m[33mn[0m[33mg[0m[33m [0m[33m{[0m[33m [0m[33mt[0m[33ma[0m[33mk[0m[33me[0m[33ms[0m[33m([0m[33mx[0m[33m)[0m[33m [0m[33m}[0m
 [38;5;240m  │[0m [33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m┬[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m  
 [38;5;240m  │[0m                        [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m defined but never used
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: prefix with underscore `_doThing` to suppress
[38;5;246m───╯[0m
[31m[E002] Error:[0m unknown type `GhostType`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:3:15 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249md[0m[38;5;249mo[0m[38;5;249mT[0m[38;5;249mh[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m([0m[38;5;249mx[0m[38;5;249m:[0m[38;5;249m [0m[31mG[0m[31mh[0m[31mo[0m[31ms[0m[31mt[0m[31mT[0m[31my[0m[31mp[0m[31me[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249ma[0m[38;5;249mk[0m[38;5;249me[0m[38;5;249ms[0m[38;5;249m([0m[38;5;249mx[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m               [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m                   [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m not defined
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: check the spelling or import/define this type
[38;5;246m───╯[0m
